--- a/views/index.html
+++ b/views/index.html
@@ -14,11 +14,14 @@
   </head>
   <body class="flex items-center justify-center min-h-screen bg-gray-100 outline">
     <div class="flex flex-col items-center lg:p-7 rounded-2xl">
-      <h1 class="text-3xl font-bold mb-4">Dunks On Demand 🏀</h1>
+      <a href="/">
+        <h1 class="text-3xl font-bold mb-4">Dunks On Demand 🏀</h1>
+      </a>
       <form action="/" method="post" class="bg-white p-6 rounded-lg shadow-md pb-12 mb-20 min-w-screen sm:min-w-lg">
         {{ template "season" .ValidSeasons }}
         {{ template "games-and-players" . }}
-        <button hx-post="/" hx-swap="none" class="w-full mt-4 bg-black text-white py-2 rounded-lg hover:bg-gray-800">👉👈</button>
+        {{ template "error" .Error }}
+        <button hx-post="/" hx-target="#error" hx-swap="outerHTML" class="w-full mt-4 bg-black text-white py-2 rounded-lg hover:bg-gray-800">👉👈</button>
       </form>
     </div>
 
@@ -113,5 +116,11 @@
         <input type="checkbox" name="player" value="{{ printf "%.0f" (derefFloat64 .PersonID) }}" > {{ .DisplayFirstLast }} - {{ .TeamAbbreviation }}
       </label>
     {{ end}}
+  </div>
+{{ end }}
+
+{{ block "error" . }}
+  <div id="error" class="text-center text-red-600">
+      {{ . }}
   </div>
 {{ end }}
