--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
         {{ template "season" .ValidSeasons }}
         {{ template "games-and-players" . }}
         {{ template "error" .Error }}
-        <button hx-post="/" hx-target="#error" hx-swap="outerHTML" class="w-full mt-4 bg-black text-white py-2 rounded-lg hover:bg-gray-800">👉👈</button>
+        <button hx-post="/" hx-target="#error" hx-swap="outerHTML" class="w-full mt-4 bg-black text-white py-2 rounded-lg hover:bg-gray-800 cursor-pointer">👉👈</button>
       </form>
     </div>
 
