--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
           hx-post="/"
           hx-target="#error"
           hx-swap="outerHTML"
-          class="w-full mt-4 bg-black text-white py-2 rounded-lg hover:bg-gray-800"
+          class="w-full mt-4 bg-black text-white py-2 rounded-lg hover:bg-gray-800 cursor-pointer"
           data-loading-class-remove="cursor-pointer"
           data-loading-class="cursor-progress"
           data-loading-path="/"
