--- a/views/job.html
+++ b/views/job.html
@@ -10,6 +10,7 @@
         integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
         crossorigin="anonymous"
       ></script>
+      <script src="/static/index.js"></script>
       <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
       <style>
 
